styling done as well on questions to make them more appropriate and rendered cards blue with white text for aesthetics

--- a/output/team.html
+++ b/output/team.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+                <h1 class="text-center">My Development Team</h1>
             </div>
         </div>
     </div>
@@ -25,14 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card bg-primary">
     <div class="card-header">
-        <h2 class="card-title text-white">Trever</h2>
+        <h2 class="card-title text-white">Trever Simmons</h2>
         <h3 class="card-title text-white"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:simons">simons</a></li>
-            <li class="list-group-item">Office number: asdf</li>
+            <li class="list-group-item">ID: 21</li>
+            <li class="list-group-item">Email: <a href="mailto:simmonst208@gmail.com">simmonst208@gmail.com</a></li>
+            <li class="list-group-item">Office number: 33</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card bg-primary">
+    <div class="card-header">
+        <h2 class="card-title text-white">Joe Holbrook</h2>
+        <h3 class="card-title text-white"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 23</li>
+            <li class="list-group-item">Email: <a href="mailto:jHolb@yahoo.com">jHolb@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/Jholb" target="_blank" rel="noopener noreferrer">Jholb</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card bg-primary">
+    <div class="card-header">
+        <h2 class="card-title text-white">Myles Neal</h2>
+        <h3 class="card-title text-white"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:maNeal@okstate.edu">maNeal@okstate.edu</a></li>
+            <li class="list-group-item">School: Oklahoma State University</li>
         </ul>
     </div>
 </div>
