final touches rendered

--- a/output/team.html
+++ b/output/team.html
@@ -38,14 +38,14 @@
 </div>
 <div class="card employee-card bg-primary">
     <div class="card-header">
-        <h2 class="card-title text-white">Joe Holbrook</h2>
+        <h2 class="card-title text-white">Joseph Holebrook</h2>
         <h3 class="card-title text-white"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 23</li>
-            <li class="list-group-item">Email: <a href="mailto:jHolb@yahoo.com">jHolb@yahoo.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/Jholb" target="_blank" rel="noopener noreferrer">Jholb</a></li>
+            <li class="list-group-item">Email: <a href="mailto:jHole@yahoo.com">jHole@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jHoleb" target="_blank" rel="noopener noreferrer">jHoleb</a></li>
         </ul>
     </div>
 </div>
@@ -56,8 +56,8 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:maNeal@okstate.edu">maNeal@okstate.edu</a></li>
+            <li class="list-group-item">ID: 8</li>
+            <li class="list-group-item">Email: <a href="mailto:maNeal@aol.com">maNeal@aol.com</a></li>
             <li class="list-group-item">School: Oklahoma State University</li>
         </ul>
     </div>
